<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LazyBone BLE</string>

    <string name="alert_dialog_no_bt">Cannot use this application without bluetooth.</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_no">No</string>
    <string name="alert_dialog_warning_title">Warning</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_turn_on_bt">This application needs Bluetooth. Do you want to turn it on?</string>

    <string name="not_connected">You are not connected to a device</string>
    <string name="title_connecting">Connecting…</string>
    <string name="title_connected_to">Connected: </string>
    <string name="title_not_connected">Not Connected</string>
    <string name="unknown_device">Unknown Device</string>

    <!--  DeviceListActivity -->
    <string name="activity_title">Device Activity</string>
    <string name="scanning">Scanning for Devices…</string>
    <string name="scanning_reg_dev">Attempting AutoConnect</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect device</string>
    <string name="changepassword">Change Password</string>
    <string name="disconnect">Disconnect device</string>
    <string name="exit">Exit</string>
    <string name="mode">Mode</string>
    <string name="special_keys">Special keys</string>

    <!-- Preference dialog -->
    <string name="general_preferences">General</string>

    <string name="title_localhecho_preference">Local echo</string>
    <string name="summary_localecho_preference">Display the key strokes</string>

    <string name="text_preferences">Text</string>

    <string name="title_fontsize_preference">Font size</string>
    <string name="summary_fontsize_preference">Choose character height in points.</string>
    <string name="dialog_title_fontsize_preference">Font size</string>

    <string name="title_color_preference">Colors</string>
    <string name="summary_color_preference">Choose text color.</string>
    <string name="dialog_title_color_preference">Text color</string>

    <string name="keyboard_preferences">Keyboard</string>
    <string name="title_controlkey_preference">Control key</string>
    <string name="summary_controlkey_preference">Choose control key.</string>
    <string name="dialog_title_controlkey_preference">Control key</string>

    <string name="title_document_key_press">Press</string>
    <string name="title_document_key_rest">and Key</string>

    <!-- Don't localize these default values -->
    <string name="default_value_localecho_preference">false</string>
    <string name="default_value_fontsize_preference">10</string>
    <string name="default_value_color_preference">2</string>
    <string name="default_value_controlkey_preference">0</string>
    <string name="title_activity_select_maps_home_location">SelectMapsHomeLocation</string>
    <string name="pref_menu_option_geofence_settings">GeoFence Settings</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="vanity_name">Vanity Name</string>
    <string name="bt_triggering_dev_name">BT Triggering Dev Name</string>
    <string name="geofence_dwell_delay">GeoFence Dwell Delay</string>
    <string name="auto_connect_period">Auto Connect Period</string>
    <string name="bg_loc_notification_title">Background Location Tracking</string>
    <string name="bg_loc_notification_message">GeoFence Tracking for </string>
    <string name="wifi_triggering_dev_name">WiFi Triggering SSID</string>
    <string name="enable_geofence_monitoring">Enable GeoFence Monitoring</string>
    <string name="enable_wifi_monitoring">Enable WiFi Monitoring</string>
    <string name="enable_bt_autostart">Enable BT AutoStart</string>
    <string name="geofence_radius">GeoFence Radius (meters)</string>
</resources>
