<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/im_bg" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50sp"
            android:background="#212839">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="General Settings"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="50sp"
                android:layout_height="fill_parent"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onBack"
                android:text="Back"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="70sp"
            android:layout_marginRight="20sp"
            android:background="#212839"
            android:orientation="vertical"
            android:paddingLeft="5sp"
            android:paddingRight="5sp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/vanity_name"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />


                <EditText
                    android:id="@+id/vanity_name"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10sp"
                    android:layout_marginEnd="1sp"

                    android:background="@color/white"
                    android:gravity="left"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayoutBT_AS"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_marginTop="15sp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/bt_as_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="100dp"
                    android:gravity="start"
                    android:text="@string/enable_bt_autostart"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/cb_enable_bt_autostart"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/linearLayoutBT_AS" />

                <CheckBox
                    android:id="@+id/cb_enable_bt_autostart"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="4dp"
                    android:checked="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/bt_as_textView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/ll_bt_trigger_dev_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:gravity="center_vertical"
                android:orientation="horizontal"

                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/bt_triggering_dev_name"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    tools:visibility="visible" />


                <EditText
                    android:id="@+id/et_bt_trigger_dev_name"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10sp"
                    android:layout_marginEnd="1sp"
                    android:background="@color/white"
                    android:gravity="left"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/enable_geofence_monitoring"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/cb_enable_geofence_monitoring"
                    android:layout_width="36dp"
                    android:layout_height="32dp"
                    android:layout_gravity="end|center_horizontal"
                    android:layout_marginStart="59sp"
                    android:layout_marginEnd="1sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_geofence_radius"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/geofence_radius"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <SeekBar
                    android:id="@+id/sb_geofence_radius"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_gravity="end|center_horizontal"
                    android:layout_marginStart="30sp"
                    android:layout_marginEnd="1sp"
                    android:max="1600"
                    android:min="100"
                    android:progress="200" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="1dp"
                    android:gravity="start"
                    android:text="@string/enable_wifi_monitoring"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/cb_enable_wifi_monitoring"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/cb_enable_wifi_monitoring" />

                <CheckBox
                    android:id="@+id/cb_enable_wifi_monitoring"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="99dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/ll_wifi_trigger_dev_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/wifi_triggering_dev_name"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />


                <EditText
                    android:id="@+id/et_wifi_trigger_dev_name"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10sp"
                    android:layout_marginEnd="1sp"

                    android:background="@color/white"
                    android:gravity="left"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <!--                    <TextView-->
                <!--                        android:id="@+id/vanity_name"-->
                <!--                        android:layout_width="90sp"-->
                <!--                        android:layout_height="fill_parent"-->
                <!--                        android:gravity="center"-->
                <!--                        android:text="test"-->
                <!--                        android:textColor="#99FF66"-->
                <!--                        android:textSize="16sp" />-->

            </LinearLayout>


            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="60sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="Scan Period"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="30sp"
                        android:layout_height="fill_parent"
                        android:background="@color/transparent"
                        android:onClick="onMinusScanTime"
                        android:text="-"
                        android:textColor="#99FF66"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_scanPeriod"
                        android:layout_width="90sp"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:text="30S"
                        android:textColor="#99FF66"
                        android:textSize="16sp" />

                    <Button
                        android:layout_width="30sp"
                        android:layout_height="fill_parent"
                        android:background="@color/transparent"
                        android:onClick="onPlusScanTime"
                        android:text="+"
                        android:textColor="#99FF66"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>


            <!--            <View-->
            <!--                android:layout_width="fill_parent"-->
            <!--                android:layout_height="0.1sp"-->
            <!--                android:alpha="0.5"-->
            <!--                android:background="@color/gray_text" />-->

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="60sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/auto_connect_period"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="30sp"
                        android:layout_height="fill_parent"
                        android:background="@color/transparent"
                        android:onClick="onMinusAutoConnectTime"
                        android:text="-"
                        android:textColor="#99FF66"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_autoConnectTime"
                        android:layout_width="90sp"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:text="15S"
                        android:textColor="#99FF66"
                        android:textSize="16sp" />

                    <Button
                        android:layout_width="30sp"
                        android:layout_height="fill_parent"
                        android:background="@color/transparent"
                        android:onClick="onAddAutoConnectTime"
                        android:text="+"
                        android:textColor="#99FF66"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="60sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/geofence_dwell_delay"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/bt_geo_minus_time"
                        android:layout_width="30sp"
                        android:layout_height="fill_parent"
                        android:background="@color/transparent"
                        android:longClickable="true"
                        android:onClick="onMinusGeoDwellTime"
                        android:text="-"
                        android:textColor="#99FF66"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_geoFenceDwellDelay"
                        android:layout_width="90sp"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:text="60S"
                        android:textColor="#99FF66"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/bt_geo_add_time"
                        android:layout_width="30sp"
                        android:layout_height="fill_parent"
                        android:background="@color/transparent"
                        android:longClickable="true"
                        android:onClick="onAddGeoDwellTime"
                        android:text="+"
                        android:textColor="#99FF66"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35sp"
        android:contentDescription="@string/alert_dialog_no"
        android:src="@drawable/im_logo" />

</RelativeLayout>